Remove jQuery on iOS (#1)

--- a/tpg/ath.html
+++ b/tpg/ath.html
@@ -1,6 +1,6 @@
 <h1>TPG<span>widget</span></h1>
 <div class="install">
-    <p>Pour installer un raccourci pour <span id="arretname">votre arrêt</span> :</p>
+    <p>Pour installer un raccourci pour <span id="ath-stop-name">votre arrêt</span> :</p>
 
     <figure>
         <figcaption>Appuyez sur le bouton <img src="/resources/img/share.png"> de la barre du bas…</figcaption>
