--- a/tpg/ath.html
+++ b/tpg/ath.html
@@ -3,12 +3,12 @@
     <p>Pour installer un raccourci pour <span id="ath-stop-name">votre arrêt</span> :</p>
 
     <figure>
-        <figcaption>Appuyez sur le bouton <img src="/resources/img/share.png"> de la barre du bas…</figcaption>
-        <img src="/resources/img/ATH.png">
+        <figcaption>Appuyez sur le bouton <img src="/resources/img/share.svg" alt="Partager"> de la barre du bas…</figcaption>
+        <img src="/resources/img/safari-toolbar.png" alt="Bouton “Partager” dans la barre d’outils">
     </figure>
     <figure>
-        <figcaption>...puis séléctionnez <img src="/resources/img/add.png"> <strong>Sur l'écran d'accueil</strong></figcaption>
-        <img src="/resources/img/sharemenu.png">
+        <figcaption>…puis séléctionnez <strong>Sur l'écran d'accueil</strong> <img src="/resources/img/add.svg" alt=""></figcaption>
+        <img src="/resources/img/share-menu.png" alt="Menu Partage">
     </figure>
 </div>
 
@@ -22,7 +22,7 @@
         width: 100%;
         height: 100%;
         background: #fff;
-        margin:0;
+        margin: 0;
     }
 
     p, h1 {
@@ -32,13 +32,12 @@
 
     h1 {
         padding: 5px 20px;
-        font-family: "Helvetica";
+        font-family: 'Helvetica', sans-serif;
         background: #f60;
-        color:#fff;
+        color: #fff;
         font-weight: 400;
         position: fixed;
         width: 100%;
-        text-shadow: 0px 0px 3px black;
     }
 
     h1 > span {
