Fix status bar color on some pages
Fixes #73

--- a/tpg/ath.html
+++ b/tpg/ath.html
@@ -34,7 +34,7 @@
     h1 {
         padding: 5px 20px;
         font-family: 'Helvetica', sans-serif;
-        background: #f60;
+        background: #fb6400;
         color: #fff;
         font-weight: 400;
         position: fixed;
